--- a/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.ioc
+++ b/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1/I2C_PB8_PB9_v1.ioc
@@ -17,7 +17,7 @@ Mcu.Package=LQFP64
 Mcu.Pin0=PC13
 Mcu.Pin1=PC14-OSC32_IN
 Mcu.Pin10=PB3
-Mcu.Pin11=PB6
+Mcu.Pin11=PB8
 Mcu.Pin12=PB9
 Mcu.Pin13=VP_SYS_VS_Systick
 Mcu.Pin2=PC15-OSC32_OUT
@@ -73,8 +73,9 @@ PB3.GPIOParameters=GPIO_Label
 PB3.GPIO_Label=SWO
 PB3.Locked=true
 PB3.Signal=SYS_JTDO-SWO
-PB6.Mode=I2C
-PB6.Signal=I2C1_SCL
+PB8.Locked=true
+PB8.Mode=I2C
+PB8.Signal=I2C1_SCL
 PB9.Locked=true
 PB9.Mode=I2C
 PB9.Signal=I2C1_SDA
